--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^2.0.0",
+    "@types/socket.io": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "socket.io": "^4.8.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
@@ -41,4 +43,3 @@
     "typescript": "^5.5.4"
   }
 }
-
